[gd_scene load_steps=6 format=3 uid="uid://cy61bit7sw74g"]

[ext_resource type="Script" path="res://UI/game_hud.gd" id="1_q00dc"]
[ext_resource type="Script" path="res://Actors/label.gd" id="1_ul12r"]
[ext_resource type="Script" path="res://Actors/label_2.gd" id="2_rh15b"]
[ext_resource type="PackedScene" uid="uid://c3aflvakwx7e6" path="res://UI/DialogueUI.tscn" id="4_qaad3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0skwr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 124
corner_radius_top_right = 124
corner_radius_bottom_right = 124
corner_radius_bottom_left = 124

[node name="GameHud" type="CanvasLayer"]
script = ExtResource("1_q00dc")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0skwr")

[node name="MirrorShardLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Mirror Shards: 1/1"
script = ExtResource("1_ul12r")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0skwr")

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Hp: 2/2"
script = ExtResource("2_rh15b")

[node name="DialogueUI" parent="." instance=ExtResource("4_qaad3")]

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="FPSCounter" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "FPS: "
